@@ -2,38 +2,46 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>org.example</groupId>
 	<artifactId>SpringDBtest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SpringDBtest</name>
 	<description>SpringDBtest</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+
 	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>21</java.version>
-		<maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
-		<maven.compiler.source>22</maven.compiler.source>
-		<maven.compiler.target>22</maven.compiler.target>
-		<maven-surefire-plugin-version>3.0.0-M5</maven-surefire-plugin-version>
+
+
+		<allure.version>2.27.0</allure.version>
+		<allure.java.commons>2.27.0</allure.java.commons>
+		<allure.plagin.version>2.10.0</allure.plagin.version>
+		<junit.jupiter.version>5.9.1</junit.jupiter.version>
+		<httpclient.version>4.5.14</httpclient.version>
+
+		<log4j.version>2.23.1</log4j.version>
+
+		<maven.compiler.plugin>3.10.1</maven.compiler.plugin>
+		<maven.surefire.plugin>3.2.3</maven.surefire.plugin>
+		<maven.surefire.version>3.0.0-M5</maven.surefire.version>
+		<selenide.version>7.3.3</selenide.version>
+		<!-- Define the version of AspectJ -->
+		<aspectj.version>1.9.21</aspectj.version>
+		<!-- webdrivermanager устанавливает сам браузер   -->
+		<webdrivermanager.version>5.9.2</webdrivermanager.version>
+		<allure.result.directory>target/allure-results</allure.result.directory>
 	</properties>
+
+	<!-- Spring фреймворк -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -60,6 +68,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+	<!-- Для подключения к Базе Данных -->
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.7.4</version>
@@ -73,74 +88,129 @@
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>6.5.0.Final</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+
+		<!-- Для логирования. Logging dependencies -->
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.6.15.Final</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+
+		<!-- Для ассертов - JUnit 5, Assertj -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- added dependency -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.jupiter.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.26.3</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Allure JUnit 5 adapter -->
 		<dependency>
 			<groupId>io.qameta.allure</groupId>
 			<artifactId>allure-junit5</artifactId>
-			<version>2.25.0</version>
+			<version>${allure.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.13.0</version>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-java-commons</artifactId>
+			<version>${allure.java.commons}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-spring-boot</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-attachments</artifactId>
+			<version>2.29.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-maven</artifactId>
+			<version>2.10.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.9</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
+	<!-- ************************************************** -->
+
 	<build>
 		<plugins>
+			<!-- Compiler plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compiler.plugin.version}</version>
+				<version>${maven.compiler.plugin}</version>
 				<configuration>
-					<source>${maven.compiler.source}</source> <!--For JAVA 8 use 1.8-->
-					<target>${maven.compiler.target}</target>
-					<enablePreview>true</enablePreview><!--For JAVA 8 use 1.8-->
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.32</version>
-						</path>
-					</annotationProcessorPaths>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<source>15</source>
+					<target>15</target>
 				</configuration>
 			</plugin>
 
+			<!-- Surefire plugin -->
+			<!-- Add the following options to your maven-surefire-plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven-surefire-plugin-version}</version>
+				<version>${maven.surefire.version}</version>
 				<configuration>
-					<!--    <testFailureIgnore>false</testFailureIgnore> -->
+					<testFailureIgnore>false</testFailureIgnore>
+					<useModulePath>false</useModulePath>
+					<failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
+					<argLine>
+						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+						-Dfile.encoding=UTF8
+					</argLine>
 				</configuration>
+
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjweaver</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
+
+			<!-- Allure plugin -->
 			<plugin>
 				<groupId>io.qameta.allure</groupId>
 				<artifactId>allure-maven</artifactId>
-				<version>2.10.0</version>
+				<version>${allure.plagin.version}</version>
 				<configuration>
-					<reportVersion>2.10.0</reportVersion>
+					<reportVersion>${allure.plagin.version}</reportVersion>
 					<reportDirectory>${basedir}/target/allure-reports</reportDirectory>
-
 				</configuration>
+
 			</plugin>
+
 		</plugins>
 	</build>
-
 </project>
